test/inputs/fail_record_T1.fw
#option "fail"

let ab : { a : int }  = { a = 1; b = () }
